fixed spacing issues

--- a/css/carissa.css
+++ b/css/carissa.css
@@ -14,7 +14,7 @@ output,ruby,section,summary,time,mark,audio,video {
 
 div, p {
     margin-left:0px;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 article,aside,details,figcaption,
